# lapack-inject

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
ctest/: Makefile  test_DGETRF.c  test_DGETRI.c  test_DPOTRF.c
examples/: with_lapack_sys.rs
ftest/: Makefile  init_openblas.c  test_dgesv.f90  test_dgetrf.f90  test_dpotrf.f90
scripts/: check_symbols.py  generate_lapack_bindings.py
src/: autoregister.rs  backend.rs  fortran.rs  lib.rs  types.rs  utils.rs  xerbla.rs
src/chol/: mod.rs  potrf.rs
src/eig/: gees.rs  geev.rs  heev.rs  mod.rs  syev.rs
src/lu/: getrf.rs  getri.rs  mod.rs
src/qr/: geqrf.rs  mod.rs  orgqr.rs  ungqr.rs
src/solve/: gels.rs  gesv.rs  mod.rs
src/svd/: gesdd.rs  gesvd.rs  mod.rs
tests/: eig_tests.rs  functional_test.rs  lapack_sys_compat.rs  lu_tests.rs  qr_tests.rs  solve_tests.rs  svd_tests.rs
