[package]
name = "lapack-inject"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "LAPACK compatible interface backed by runtime-registered Fortran LAPACK function pointers"
keywords = ["lapack", "ffi", "linear-algebra", "runtime"]
categories = ["science", "mathematics", "external-ffi-bindings"]

[lib]
name = "lapack_inject"
crate-type = ["rlib", "cdylib"]

[dependencies]
num-complex = "0.4"
ctor = { version = "0.2", optional = true }

[dev-dependencies]
lapack-sys = "0.14"
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }

[features]
default = []
ilp64 = []
openblas = ["ctor"]
